# attal

src/: .cvsignore  AUTHORS  Attal.dsw  INSTALL  Makefile.am  Makefile.dist  NEWS  TODO  acinclude.m4  attal.lsm  conf.h  configure.in  doxyfile  template.cpp  template.h  try.map
src/client/: .cvsignore  Makefile.am  askWidget.cpp  askWidget.h  attal.dsp  attalStyle.cpp  attalStyle.h  building.cpp  building.h  cell.cpp  cell.h  chatWidget.cpp  chatWidget.h  clientInterface.cpp  clientInterface.h  displayBase.cpp  displayBase.h  displayCreature.cpp  displayCreature.h  displayLord.cpp  displayLord.h  displayTechnics.cpp  displayTechnics.h  duel.cpp  event.cpp  event.h  fight.cpp  fight.h  fightCell.cpp  fightCell.h  fightMap.cpp  fightMap.h  fightMapView.cpp  fightMapView.h  fightResult.cpp  fightResult.h  fightUnit.cpp  fightUnit.h  gainLevel.cpp  gainLevel.h  (+65 more)
src/common/: .cvsignore  Common.dsp  Makefile.am  action.cpp  action.h  artefact.cpp  artefact.h  attalSocket.cpp  attalSocket.h  calendar.cpp  calendar.h  categoryManager.cpp  categoryManager.h  condition.cpp  condition.h  creature.cpp  creature.h  dataTheme.cpp  dataTheme.h  define.h  genericBase.cpp  genericBase.h  genericBuilding.cpp  genericBuilding.h  genericCell.cpp  genericCell.h  genericDecoration.cpp  genericDecoration.h  genericEvent.cpp  genericEvent.h  genericFightCell.cpp  genericFightCell.h  genericFightMap.cpp  genericFightMap.h  genericInsideBuilding.cpp  genericInsideBuilding.h  genericLord.cpp  genericLord.h  genericMap.cpp  genericMap.h  (+30 more)
src/editor/: .cvsignore  Makefile.am  chooseTiles.cpp  chooseTiles.h  editor.cpp  editorHandler.cpp  editorHandler.h  interface.cpp  interface.h  scenarioInfo.cpp  scenarioInfo.h  screen.cpp  screen.h
src/ia/: .cvsignore  AI.dsp  Makefile.am  aiInterface.cpp  aiInterface.h  analyst.cpp  analyst.h  main.cpp
src/scenarioEditor/: .cvsignore  Makefile.am  ScenarioEditor.dsp  editorHandler.cpp  editorHandler.h  graphicalGameData.cpp  graphicalGameData.h  itemSelection.cpp  itemSelection.h  itemSelector.cpp  itemSelector.h  propertiesItem.cpp  propertiesItem.h  propertiesLord.cpp  propertiesLord.h  scenarioEditor.cpp  scenarioInfo.cpp  scenarioInfo.h  scenarioInterface.cpp  scenarioInterface.h  screen.cpp  screen.h
src/server/: .cvsignore  Makefile.am  attalServer.cpp  attalServer.h  duel.cpp  engine.cpp  engine.h  fightAnalyst.cpp  fightAnalyst.h  fightEngine.cpp  fightEngine.h  gameData.cpp  gameData.h  interfaceDuel.cpp  interfaceDuel.h  libserver.dsp  main.cpp  parser.cpp  parser.h  questManager.cpp  questManager.h  server.dsp  serverInterface.cpp  serverInterface.h
src/themeEditor/: .cvsignore  Makefile.am  ThemeEditor.dsp  sectionArtefact.cpp  sectionArtefact.h  sectionBase.cpp  sectionBase.h  sectionBuilding.cpp  sectionBuilding.h  sectionCreature.cpp  sectionCreature.h  sectionDecoration.cpp  sectionDecoration.h  sectionGeneral.cpp  sectionGeneral.h  sectionGround.cpp  sectionGround.h  sectionLord.cpp  sectionLord.h  sectionMachine.cpp  sectionMachine.h  sectionRessource.cpp  sectionRessource.h  sectionSelector.cpp  sectionSelector.h  sectionTeam.cpp  sectionTeam.h  sectionWidget.cpp  sectionWidget.h  themeEditor.cpp  themeInterface.cpp  themeInterface.h
src2/: .cvsignore  HOWTOPLAY  HOWTOPLAY.html  INSTALL  INSTALL.Debian  Makefile.pro  NEWS  README  TODO  autogen.sh  conf.h  config.pro  doxyfile  qmake.dsp  qmake.dsw  template.cpp  template.h
src2/admin/: attal-qt-4.2.patch  attal.iss  attal.spec  create_debs.sh
src2/ai/: .cvsignore  ai.pro  aiInterface.cpp  aiInterface.h  main.cpp
src2/campaignEditor/: .cvsignore  campaignEditor.cpp  campaignEditor.pro  campaignInterface.cpp  campaignInterface.h  mainCampaignScreen.cpp  mainCampaignScreen.h
src2/client/: .cvsignore  client.pro  clientInterface.cpp  clientInterface.h  clientWidgets.cpp  clientWidgets.h  duel.cpp  interfaceDuel.cpp  interfaceDuel.h  main.cpp
src2/docs/: fightProtocol.txt
src2/i18n/: .cvsignore  i18n.pro
src2/libAi/: aiLord.cpp  aiLord.h  analyst.cpp  analyst.h  libAi.pro
src2/libClient/: .cvsignore  aboutDialog.cpp  aboutDialog.h  askChest.cpp  askChest.h  askCost.cpp  askCost.h  askDialog.cpp  askDialog.h  askWidget.cpp  askWidget.h  attalButton.cpp  attalButton.h  attalSound.cpp  attalSound.h  attalSprite.cpp  attalSprite.h  attalStyle.cpp  attalStyle.h  bonus.cpp  bonus.h  building.cpp  building.h  cell.cpp  cell.h  chatWidget.cpp  chatWidget.h  chest.cpp  chest.h  displayArtefacts.cpp  displayArtefacts.h  displayBase.cpp  displayBase.h  displayCreature.cpp  displayCreature.h  displayLord.cpp  displayLord.h  displayTechnics.cpp  displayTechnics.h  event.cpp  (+66 more)
src2/libCommon/: .cvsignore  action.cpp  action.h  artefact.cpp  artefact.h  artefactManager.cpp  artefactManager.h  attalCommon.cpp  attalCommon.h  attalSettings.cpp  attalSettings.h  attalSocket.cpp  attalSocket.h  attalSocketData.cpp  attalSocketData.h  attalTemplates.h  calendar.cpp  calendar.h  campaign.cpp  campaign.h  categoryManager.cpp  categoryManager.h  condition.cpp  condition.h  creature.cpp  creature.h  dataTheme.cpp  dataTheme.h  define.h  displayHelp.cpp  displayHelp.h  fightResultStatus.cpp  fightResultStatus.h  gameData.cpp  gameData.h  generalOptions.cpp  generalOptions.h  genericBase.cpp  genericBase.h  genericBonus.cpp  (+62 more)
src2/libFight/: .cvsignore  casualtiesReport.cpp  casualtiesReport.h  fight.cpp  fight.h  fightCell.cpp  fightCell.h  fightControl.cpp  fightControl.h  fightMap.cpp  fightMap.h  fightMapView.cpp  fightMapView.h  fightResult.cpp  fightResult.h  fightSettingsDialog.cpp  fightSettingsDialog.h  fightUnit.cpp  fightUnit.h  graphicalFightCell.cpp  graphicalFightCell.h  graphicalFightMap.cpp  graphicalFightMap.h  libFight.pro  lordReport.cpp  lordReport.h
src2/libServer/: attalServer.cpp  attalServer.h  engine.cpp  engine.h  fightAnalyst.cpp  fightAnalyst.h  fightEngine.cpp  fightEngine.h  libServer.pro  loadGame.cpp  loadGame.h  playingTroops.cpp  playingTroops.h  questionManager.cpp  (+5 more)
themes/: .cvsignore  themes.pro
web/: .cvsignore  index.html  style.css  test2.css  test2old.css
(+312 files in other folders)
